static/styles/style.css
body {
	background-color:#5774A0;
}

#header{
	z-index:10; 
	background-color:goldenrod; 
	float:left; 
	position:fixed; 
	width:100%; 
	left:8px;
}

#logo{
	float:left;
}

#searchtabs{
	position:relative; 
	float:center; 
	top:25px; 
	left:20px;
}

#tabs{
	position:relative;
	top:20px;
}

.tabs{
	float:left;
}

/* ================== DROPDOWN STUFF ================== */

.dropP:hover{
	background-color:red;
}

/* Dropdown Button */
.dropbtn {
    background-color: #24406A;
    color: white;
    padding: 16px;
    font-size: 26px;
    border: none;
    cursor: pointer;
    width: 150px;
}

/* Dropdown button on hover & focus */
.dropbtn:hover, .dropbtn:focus {
    background-color: #5774A0;
}

/* The container <div> - needed to position the dropdown content */
#tabs {
    position: relative;
    display: inline-block;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f1f1f1;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

/* Links inside the dropdown */
.dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {background-color: #ddd}

/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
.show {display:block;}

/* =================== END OF DROPDOWN STUFF =====================*/

